图表体验优化

--- a/需求.md
+++ b/需求.md
@@ -32,3 +32,5 @@ chart.html：可以用CDN 图表库（比如 Chart.js），还是必须离线纯
 
 我不希望图标的横轴无限延长, 而是始终最多显示一年的 1 月 1 日到 12 月 31 日,
 如果weather_history包含多年的数据, 则顶部出现年份多选, 默认只选中最新的年
+
+再增加一个一年内的时间范围选择器,以下几个选项:全年(默认),上半年,下半年,最近 3 个月
