增加了透明度按年份逐级递减

--- a/需求.md
+++ b/需求.md
@@ -34,3 +34,7 @@ chart.html：可以用CDN 图表库（比如 Chart.js），还是必须离线纯
 如果weather_history包含多年的数据, 则顶部出现年份多选, 默认只选中最新的年
 
 再增加一个一年内的时间范围选择器,以下几个选项:全年(默认),上半年,下半年,最近 3 个月
+
+## 2026-01-07 新增
+多个年份的折线颜色一样,会让人看不清楚, 改为年份约早, 颜色不变但透明度逐级递减
+把折线的样式改为1px细线, 不用实线和虚线区分不同年份, 统一使用实线, 去掉数据点的圆点
